--- a/succinct.cabal
+++ b/succinct.cabal
@@ -1,15 +1,15 @@
-cabal-version:  2.2
+cabal-version:  3.4
 
-name:                   hw-json
+name:                   succinct
 version:                1.3.3.0
 synopsis:               Memory efficient JSON parser
 description:            Memory efficient JSON parser. Please see README.md
 category:               Data
-homepage:               http://github.com/haskell-works/hw-json#readme
-bug-reports:            https://github.com/haskell-works/hw-json/issues
+homepage:               http://github.com/haskell-works/succinct#readme
+bug-reports:            https://github.com/haskell-works/succinct/issues
 author:                 John Ky
 maintainer:             newhoggy@gmail.com
-copyright:              2016-2021 John Ky
+copyright:              2016-2024 John Ky
 license:                BSD-3-Clause
 license-file:           LICENSE
 tested-with:            GHC == 9.8.2, GHC == 9.6.6
@@ -25,7 +25,7 @@ extra-source-files:     README.md
 
 source-repository head
   type: git
-  location: https://github.com/haskell-works/hw-json
+  location: https://github.com/haskell-works/succinct
 
 flag bmi2
   description:  Enable bmi2 instruction set
@@ -91,10 +91,9 @@ common config
     ghc-options:        -mbmi2 -msse4.2
     cpp-options:        -DBMI2_ENABLED
 
-common hw-json
-  build-depends:        hw-json
+common succinct-json              { build-depends:        succinct:json                                 }
 
-library
+library json
   import:               base, config
                       , aeson
                       , attoparsec
@@ -118,9 +117,10 @@ library
                       , text
                       , vector
                       , word8
+  visibility:           public
   hs-source-dirs:       src
-  other-modules:        Paths_hw_json
-  autogen-modules:      Paths_hw_json
+  other-modules:        Paths_succinct
+  autogen-modules:      Paths_succinct
   exposed-modules:      HaskellWorks.Data.Json.DecodeError
                         HaskellWorks.Data.Json.FromValue
                         HaskellWorks.Data.Json.Internal.CharLike
@@ -141,14 +141,13 @@ library
                         HaskellWorks.Data.Json.Standard.Load.Partial
                         HaskellWorks.Data.Json.Value
 
-executable hw-json
+executable succinct-json
   import:               base, config
                       , aeson
                       , bytestring
                       , dlist
                       , generic-lens
                       , hw-balancedparens
-                      , hw-json
                       , hw-json-simd
                       , hw-json-simple-cursor
                       , hw-json-standard-cursor
@@ -159,6 +158,7 @@ executable hw-json
                       , lens
                       , mmap
                       , optparse-applicative
+                      , succinct-json
                       , text
                       , unordered-containers
                       , vector
@@ -172,7 +172,7 @@ executable hw-json
                         App.Commands.Demo
                         App.Commands.Types
 
-test-suite hw-json-test
+test-suite succinct-json-test
   import:               base, config
                       , aeson
                       , attoparsec
@@ -184,7 +184,6 @@ test-suite hw-json-test
                       , hw-balancedparens
                       , hw-bits
                       , hw-hspec-hedgehog
-                      , hw-json
                       , hw-json-simple-cursor
                       , hw-json-standard-cursor
                       , hw-mquery
@@ -192,6 +191,7 @@ test-suite hw-json-test
                       , hw-rankselect
                       , hw-rankselect-base
                       , scientific
+                      , succinct-json
                       , text
                       , transformers
                       , vector
@@ -208,15 +208,15 @@ test-suite hw-json-test
                         HaskellWorks.Data.Json.TypeSpec
                         HaskellWorks.Data.Json.ValueSpec
 
-library examples
+library json-examples
   import:               base, config
                       , aeson
                       , bytestring
                       , dlist
-                      , hw-json
                       , hw-json-standard-cursor
                       , hw-mquery
                       , hw-prim
+                      , succinct-json
   hs-source-dirs:       examples
   other-modules:        Example1
                         Example2
@@ -228,9 +228,9 @@ benchmark bench
                       , bytestring
                       , criterion
                       , directory
-                      , hw-json
                       , hw-json-standard-cursor
                       , mmap
+                      , succinct-json
   type:                 exitcode-stdio-1.0
   main-is:              Main.hs
   hs-source-dirs:       bench
@@ -239,7 +239,7 @@ test-suite doctest
   import:               base, config
                       , doctest
                       , doctest-discover
-                      , hw-json
+                      , succinct-json
   default-language:     Haskell2010
   type:                 exitcode-stdio-1.0
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
