--- a/demos/succinct-demo.cabal
+++ b/demos/succinct-demo.cabal
@@ -29,27 +29,27 @@ flag sse42
   manual: False
   default: False
 
-common base                 { build-depends: base                 >= 4          && < 5      }
+common base                           { build-depends: base                           >= 4          && < 5      }
 
-common aeson                { build-depends: aeson                >= 2.0        && < 2.3    }
-common bits-extra           { build-depends: bits-extra           >= 0.0.1      && < 0.1    }
-common bytestring           { build-depends: bytestring           >= 0.10.6     && < 0.12   }
-common deepseq              { build-depends: deepseq              >= 1.4.0.0    && < 1.5    }
-common dlist                { build-depends: dlist                >= 0.8        && < 1.1    }
-common hw-balancedparens    { build-depends: hw-balancedparens    >= 0.3.0.0    && < 0.5    }
-common hw-bits              { build-depends: hw-bits              >= 0.7.0.5    && < 0.8    }
-common hw-json-simd         { build-depends: hw-json-simd         >= 0.1.0.2    && < 0.2    }
-common hw-mquery            { build-depends: hw-mquery            >= 0.2.0.0    && < 0.3    }
-common hw-prim              { build-depends: hw-prim              >= 0.6.2.32   && < 0.7    }
-common hw-rankselect        { build-depends: hw-rankselect        >= 0.13       && < 0.14   }
-common hw-rankselect-base   { build-depends: hw-rankselect-base   >= 0.3.2.1    && < 0.4    }
-common hw-simd              { build-depends: hw-simd              >= 0.1.1.2    && < 0.2    }
-common lens                 { build-depends: lens                 >= 4          && < 6      }
-common mmap                 { build-depends: mmap                 >= 0.5        && < 0.6    }
-common succinct-json        { build-depends: succinct:json        >= 1.0.0.0    && < 1.4    }
-common vector               { build-depends: vector               >= 0.12       && < 0.13   }
+common aeson                          { build-depends: aeson                          >= 2.0        && < 2.3    }
+common bits-extra                     { build-depends: bits-extra                     >= 0.0.1      && < 0.1    }
+common bytestring                     { build-depends: bytestring                     >= 0.10.6     && < 0.12   }
+common deepseq                        { build-depends: deepseq                        >= 1.4.0.0    && < 1.5    }
+common dlist                          { build-depends: dlist                          >= 0.8        && < 1.1    }
+common hw-balancedparens              { build-depends: hw-balancedparens              >= 0.3.0.0    && < 0.5    }
+common hw-bits                        { build-depends: hw-bits                        >= 0.7.0.5    && < 0.8    }
+common hw-json-simd                   { build-depends: hw-json-simd                   >= 0.1.0.2    && < 0.2    }
+common hw-mquery                      { build-depends: hw-mquery                      >= 0.2.0.0    && < 0.3    }
+common hw-prim                        { build-depends: hw-prim                        >= 0.6.2.32   && < 0.7    }
+common hw-rankselect                  { build-depends: hw-rankselect                  >= 0.13       && < 0.14   }
+common hw-rankselect-base             { build-depends: hw-rankselect-base             >= 0.3.2.1    && < 0.4    }
+common hw-simd                        { build-depends: hw-simd                        >= 0.1.1.2    && < 0.2    }
+common lens                           { build-depends: lens                           >= 4          && < 6      }
+common mmap                           { build-depends: mmap                           >= 0.5        && < 0.6    }
+common succinct-json                  { build-depends: succinct:succinct-json         >= 1.0.0.0    && < 1.4    }
+common vector                         { build-depends: vector                         >= 0.12       && < 0.13   }
 
-common semigroups   { if impl(ghc <  8    ) { build-depends: semigroups     >= 0.16     && < 0.20 } }
+common semigroups   { if impl(ghc <  8    ) { build-depends: semigroups               >= 0.16       && < 0.20 } }
 
 common config
   default-language: Haskell2010
