--- a/succinct.cabal
+++ b/succinct.cabal
@@ -118,7 +118,7 @@ library succinct-json
                       , vector
                       , word8
   visibility:           public
-  hs-source-dirs:       libs/json
+  hs-source-dirs:       components/succinct-json
   other-modules:        Paths_succinct
   autogen-modules:      Paths_succinct
   exposed-modules:      HaskellWorks.Data.Json.DecodeError
@@ -163,7 +163,7 @@ executable succinct-json-app
                       , unordered-containers
                       , vector
   main-is:              Main.hs
-  hs-source-dirs:       apps/succinct-json
+  hs-source-dirs:       components/succinct-json-app
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
   other-modules:        App.Commands
                         App.Commands.CreateIndex
@@ -172,7 +172,7 @@ executable succinct-json-app
                         App.Commands.Demo
                         App.Commands.Types
 
-test-suite succinct-json-test
+test-suite succinct-json-tests
   import:               base, config
                       , aeson
                       , attoparsec
@@ -197,7 +197,7 @@ test-suite succinct-json-test
                       , vector
   type:                 exitcode-stdio-1.0
   main-is:              Spec.hs
-  hs-source-dirs:       tests/json
+  hs-source-dirs:       components/succinct-json-tests
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
   build-tool-depends:   hspec-discover:hspec-discover
   other-modules:        Data.Succinct.Json.LightJsonSpec
@@ -233,16 +233,4 @@ benchmark succinct-json-bench
                       , succinct-json
   type:                 exitcode-stdio-1.0
   main-is:              Main.hs
-  hs-source-dirs:       benchmarks/json
-
-test-suite succinct-json-doctest
-  import:               base, config
-                      , doctest
-                      , doctest-discover
-                      , succinct-json
-  default-language:     Haskell2010
-  type:                 exitcode-stdio-1.0
-  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
-  main-is:              DoctestDriver.hs
-  HS-Source-Dirs:       doctest
-  build-tool-depends:   doctest-discover:doctest-discover
+  hs-source-dirs:       components/succinct-json-bench
