--- a/succinct.cabal
+++ b/succinct.cabal
@@ -45,7 +45,10 @@ common attoparsec                     { build-depends: attoparsec               
 common attoparsec-aeson               { build-depends: attoparsec-aeson               >= 2          && < 3      }
 common bits-extra                     { build-depends: bits-extra                     >= 0.0.1.3    && < 0.1    }
 common bytestring                     { build-depends: bytestring                     >= 0.10.6     && < 0.13   }
+common cassava                        { build-depends: cassava                        >= 0.5.1.0    && < 0.6    }
+common containers                     { build-depends: containers                     >= 0.5        && < 0.8    }
 common criterion                      { build-depends: criterion                      >= 1.4        && < 1.7    }
+common deepseq                        { build-depends: deepseq                        >= 1.4        && < 1.6    }
 common directory                      { build-depends: directory                      >= 1.3        && < 1.4    }
 common dlist                          { build-depends: dlist                          >= 0.8        && < 1.1    }
 common doctest                        { build-depends: doctest                        >= 0.16.2     && < 0.23   }
@@ -56,6 +59,7 @@ common hedgehog                       { build-depends: hedgehog                 
 common hspec                          { build-depends: hspec                          >= 2.4        && < 3      }
 common hw-balancedparens              { build-depends: hw-balancedparens              >= 0.3.0.0    && < 0.5    }
 common hw-bits                        { build-depends: hw-bits                        >= 0.7.0.5    && < 0.8    }
+common hw-hedgehog                    { build-depends: hw-hedgehog                    >= 0.1.0.1    && < 0.2    }
 common hw-hspec-hedgehog              { build-depends: hw-hspec-hedgehog              >= 0.1.0.4    && < 0.2    }
 common hw-json-simd {
   if arch(x86_64)
@@ -66,10 +70,6 @@ common hw-parser                      { build-depends: hw-parser                
 common hw-prim                        { build-depends: hw-prim                        >= 0.6.2.32   && < 0.7    }
 common hw-rankselect                  { build-depends: hw-rankselect                  >= 0.13       && < 0.14   }
 common hw-rankselect-base             { build-depends: hw-rankselect-base             >= 0.3.2.1    && < 0.4    }
-common hw-simd {
-  if arch(x86_64)
-    build-depends: hw-simd                    >= 0.1.1.2    && < 0.2
-}
 common lens                           { build-depends: lens                           >= 4          && < 6      }
 common mmap                           { build-depends: mmap                           >= 0.5        && < 0.6    }
 common optparse-applicative           { build-depends: optparse-applicative           >= 0.14       && < 0.19   }
@@ -93,6 +93,7 @@ common config
 common succinct-json                  { build-depends: succinct:succinct-json                                   }
 common succinct-json-simple-cursor    { build-depends: succinct:succinct-json-simple-cursor                     }
 common succinct-json-standard-cursor  { build-depends: succinct:succinct-json-standard-cursor                   }
+common succinct-simd                  { build-depends: succinct:succinct-simd                                   }
 
 library succinct-json
   import:               base, config
@@ -109,12 +110,12 @@ library succinct-json
                       , hw-prim
                       , hw-rankselect
                       , hw-rankselect-base
-                      , hw-simd
                       , mmap
                       , prettyprinter
                       , scientific
                       , succinct-json-simple-cursor
                       , succinct-json-standard-cursor
+                      , succinct-simd
                       , text
                       , vector
                       , word8
@@ -420,4 +421,95 @@ test-suite succinct-json-standard-cursor--doctest
   ghc-options:          -threaded -rtsopts -with-rtsopts=-N
   main-is:              DoctestDriver.hs
   HS-Source-Dirs:       components/succinct-json-standard-cursor--doctest
+  build-tool-depends:   doctest-discover:doctest-discover
+
+library succinct-simd
+  import:               base, config
+                      , bits-extra
+                      , bytestring
+                      , deepseq
+                      , hw-bits
+                      , hw-prim
+                      , hw-rankselect
+                      , hw-rankselect-base
+                      , transformers
+                      , vector
+  exposed-modules:      HaskellWorks.Data.Simd.Capabilities
+                        HaskellWorks.Data.Simd.ChunkString
+                        HaskellWorks.Data.Simd.Comparison
+                        HaskellWorks.Data.Simd.Comparison.Avx2
+                        HaskellWorks.Data.Simd.Comparison.Stock
+                        HaskellWorks.Data.Simd.Internal.Bits
+                        HaskellWorks.Data.Simd.Internal.Broadword
+                        HaskellWorks.Data.Simd.Internal.ChunkString
+                        HaskellWorks.Data.Simd.Internal.Foreign
+                        HaskellWorks.Data.Simd.Internal.Marshal
+                        HaskellWorks.Data.Simd.Logical
+                        HaskellWorks.Data.Simd.Logical.Avx2
+                        HaskellWorks.Data.Simd.Logical.Stock
+  other-modules:        Paths_succinct
+  autogen-modules:      Paths_succinct
+  hs-source-dirs:       components/succinct-simd
+  include-dirs:         components/succinct-simd--cbits
+  c-sources:            components/succinct-simd--cbits/simd_avx2.c
+                        components/succinct-simd--cbits/simd_sse2.c
+  build-tool-depends:   c2hs:c2hs
+
+test-suite succinct-simd--test
+  import:               base, config
+                      , bits-extra
+                      , bytestring
+                      , deepseq
+                      , directory
+                      , hedgehog
+                      , hspec
+                      , hw-bits
+                      , hw-hedgehog
+                      , hw-hspec-hedgehog
+                      , hw-prim
+                      , hw-rankselect
+                      , hw-rankselect-base
+                      , lens
+                      , succinct-simd
+                      , text
+                      , vector
+  type:                 exitcode-stdio-1.0
+  main-is:              Spec.hs
+  other-modules:        HaskellWorks.Data.Simd.ComparisonSpec
+                        HaskellWorks.Data.Simd.Internal.BroadwordSpec
+                        HaskellWorks.Data.Simd.LogicalSpec
+  hs-source-dirs:       components/succinct-simd--test
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:   hspec-discover:hspec-discover
+
+benchmark succinct-simd--bench
+  import:               base, config
+                      , bits-extra
+                      , bytestring
+                      , cassava
+                      , containers
+                      , criterion
+                      , deepseq
+                      , directory
+                      , hw-bits
+                      , hw-prim
+                      , hw-rankselect
+                      , hw-rankselect-base
+                      , mmap
+                      , succinct-simd
+                      , transformers
+                      , vector
+  type:                 exitcode-stdio-1.0
+  main-is:              Main.hs
+  hs-source-dirs:       components/succinct-simd--bench
+
+test-suite succinct-simd--doctest
+  import:               base, config
+                      , doctest
+                      , doctest-discover
+                      , succinct-simd
+  type:                 exitcode-stdio-1.0
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  main-is:              DoctestDriver.hs
+  HS-Source-Dirs:       components/succinct-simd--doctest
   build-tool-depends:   doctest-discover:doctest-discover
