--- a/succinct.cabal
+++ b/succinct.cabal
@@ -58,11 +58,12 @@ common filepath                       { build-depends: filepath                 
 common generic-lens                   { build-depends: generic-lens                   >= 1.2.0.1    && < 2.3    }
 common hedgehog                       { build-depends: hedgehog                       >= 0.6        && < 1.5    }
 common hspec                          { build-depends: hspec                          >= 2.4        && < 3      }
-common hw-balancedparens              { build-depends: hw-balancedparens              >= 0.3.0.0    && < 0.5    }
 common hw-bits                        { build-depends: hw-bits                        >= 0.7.0.5    && < 0.8    }
+common hw-excess                      { build-depends: hw-excess                      >= 0.2.2.0    && < 0.3    }
 common hw-fingertree                  { build-depends: hw-fingertree                  >= 0.1.1.0    && < 0.2    }
 common hw-hedgehog                    { build-depends: hw-hedgehog                    >= 0.1.0.1    && < 0.2    }
 common hw-hspec-hedgehog              { build-depends: hw-hspec-hedgehog              >= 0.1.0.4    && < 0.2    }
+common hw-int                         { build-depends: hw-int                         >= 0.0.2      && < 0.0.3  }
 common hw-json-simd {
   if arch(x86_64)
     build-depends: hw-json-simd               >= 0.1.0.2    && < 0.2
@@ -94,11 +95,186 @@ common config
     ghc-options:        -mbmi2 -msse4.2
     cpp-options:        -DBMI2_ENABLED
 
+common succinct-balancedparens        { build-depends: succinct:succinct-balancedparens                         }
+common succinct-balancedparens-gen    { build-depends: succinct:succinct-balancedparens-gen                     }
 common succinct-json                  { build-depends: succinct:succinct-json                                   }
 common succinct-json-simple-cursor    { build-depends: succinct:succinct-json-simple-cursor                     }
 common succinct-json-standard-cursor  { build-depends: succinct:succinct-json-standard-cursor                   }
 common succinct-rankselect            { build-depends: succinct:succinct-rankselect                             }
 common succinct-simd                  { build-depends: succinct:succinct-simd                                   }
+
+library succinct-balancedparens
+  import:               base, config
+                      , deepseq
+                      , hw-bits
+                      , hw-excess
+                      , hw-fingertree
+                      , hw-int
+                      , hw-prim
+                      , hw-rankselect-base
+                      , vector
+  visibility:           public
+  exposed-modules:      HaskellWorks.Data.BalancedParens
+                        HaskellWorks.Data.BalancedParens.BalancedParens
+                        HaskellWorks.Data.BalancedParens.CloseAt
+                        HaskellWorks.Data.BalancedParens.Enclose
+                        HaskellWorks.Data.BalancedParens.FindClose
+                        HaskellWorks.Data.BalancedParens.FindCloseN
+                        HaskellWorks.Data.BalancedParens.FindOpen
+                        HaskellWorks.Data.BalancedParens.FindOpenN
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Vector16
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Vector32
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Vector64
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Vector8
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Word16
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Word32
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Word64
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Word8
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Vector16
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Vector32
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Vector64
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Vector8
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Word16
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Word32
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Word64
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Word8
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.Word64
+                        HaskellWorks.Data.BalancedParens.Internal.List
+                        HaskellWorks.Data.BalancedParens.Internal.ParensSeq
+                        HaskellWorks.Data.BalancedParens.Internal.RoseTree
+                        HaskellWorks.Data.BalancedParens.Internal.Show
+                        HaskellWorks.Data.BalancedParens.Internal.Slow.FindCloseC.Generic
+                        HaskellWorks.Data.BalancedParens.Internal.Slow.FindCloseN.Generic
+                        HaskellWorks.Data.BalancedParens.Internal.Slow.FindUnmatchedCloseFar.Vector16
+                        HaskellWorks.Data.BalancedParens.Internal.Slow.FindUnmatchedCloseFar.Vector32
+                        HaskellWorks.Data.BalancedParens.Internal.Slow.FindUnmatchedCloseFar.Vector64
+                        HaskellWorks.Data.BalancedParens.Internal.Slow.FindUnmatchedCloseFar.Vector8
+                        HaskellWorks.Data.BalancedParens.Internal.Slow.FindUnmatchedCloseFar.Word16
+                        HaskellWorks.Data.BalancedParens.Internal.Slow.FindUnmatchedCloseFar.Word32
+                        HaskellWorks.Data.BalancedParens.Internal.Slow.FindUnmatchedCloseFar.Word64
+                        HaskellWorks.Data.BalancedParens.Internal.Slow.FindUnmatchedCloseFar.Word8
+                        HaskellWorks.Data.BalancedParens.Internal.Trace
+                        HaskellWorks.Data.BalancedParens.Internal.Vector.Storable
+                        HaskellWorks.Data.BalancedParens.Internal.Word
+                        HaskellWorks.Data.BalancedParens.Internal.Word16
+                        HaskellWorks.Data.BalancedParens.Internal.Word32
+                        HaskellWorks.Data.BalancedParens.Internal.Word64
+                        HaskellWorks.Data.BalancedParens.Internal.Word8
+                        HaskellWorks.Data.BalancedParens.NewCloseAt
+                        HaskellWorks.Data.BalancedParens.NewOpenAt
+                        HaskellWorks.Data.BalancedParens.OpenAt
+                        HaskellWorks.Data.BalancedParens.ParensSeq
+                        HaskellWorks.Data.BalancedParens.ParensSeq.Types
+                        HaskellWorks.Data.BalancedParens.RangeMin
+                        HaskellWorks.Data.BalancedParens.RangeMin2
+                        HaskellWorks.Data.BalancedParens.Simple
+  other-modules:        Paths_succinct
+  autogen-modules:      Paths_succinct
+  hs-source-dirs:       components/succinct-balancedparens
+
+library succinct-balancedparens-gen
+  import:               base, config
+                      , deepseq
+                      , directory
+                      , hedgehog
+                      , hspec
+                      , hw-prim
+                      , succinct-balancedparens
+                      , vector
+  exposed-modules:      HaskellWorks.Data.BalancedParens.Gen
+                        HaskellWorks.Data.BalancedParens.Internal.IO
+  hs-source-dirs:       components/succinct-balancedparens-gen
+
+executable succinct-balancedparens--app
+  import:               base, config
+                      , bytestring
+                      , generic-lens
+                      , hw-bits
+                      , hw-prim
+                      , lens
+                      , mmap
+                      , optparse-applicative
+                      , succinct-balancedparens
+                      , vector
+  main-is:              Main.hs
+  hs-source-dirs:       components/succinct-balancedparens--app
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  other-modules:        App.Commands
+                        App.Commands.BitsToParens
+                        App.Commands.Options.Type
+                        App.Commands.ParensToBits
+                        App.Commands.Positions
+                        App.IO
+                        Paths_succinct
+
+test-suite succinct-balancedparens--test
+  import:               base, config
+                      , directory
+                      , hedgehog
+                      , hspec
+                      , hw-bits
+                      , hw-hspec-hedgehog
+                      , hw-int
+                      , hw-prim
+                      , hw-rankselect-base
+                      , succinct-balancedparens
+                      , succinct-balancedparens-gen
+                      , transformers
+                      , vector
+  type:                 exitcode-stdio-1.0
+  main-is:              Spec.hs
+  other-modules:        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Vector8Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Vector16Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Vector32Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Vector64Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Vector8Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Vector16Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Vector32Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindClose.Vector64Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Word16Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Word32Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Word64Spec
+                        HaskellWorks.Data.BalancedParens.Internal.Broadword.FindUnmatchedCloseFar.Word8Spec
+                        HaskellWorks.Data.BalancedParens.Internal.BroadwordSpec
+                        HaskellWorks.Data.BalancedParens.Internal.ParensSeqSpec
+                        HaskellWorks.Data.BalancedParens.FindCloseNSpec
+                        HaskellWorks.Data.BalancedParens.RangeMin2Spec
+                        HaskellWorks.Data.BalancedParens.RangeMinSpec
+                        HaskellWorks.Data.BalancedParens.SimpleSpec
+  hs-source-dirs:       components/succinct-balancedparens--test
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  build-tool-depends:   hspec-discover:hspec-discover
+
+benchmark succinct-balancedparens--bench
+  import:               base, config
+                      , criterion
+                      , deepseq
+                      , directory
+                      , generic-lens
+                      , hedgehog
+                      , hw-bits
+                      , hw-prim
+                      , lens
+                      , succinct-balancedparens
+                      , succinct-balancedparens-gen
+                      , vector
+  type:                 exitcode-stdio-1.0
+  main-is:              Main.hs
+  hs-source-dirs:       components/succinct-balancedparens--bench
+
+test-suite succinct-balancedparens--doctest
+  import:               base, config
+                      , doctest
+                      , doctest-discover
+                      , hw-bits
+                      , hw-prim
+                      , succinct-balancedparens
+  default-language:     Haskell2010
+  type:                 exitcode-stdio-1.0
+  ghc-options:          -threaded -rtsopts -with-rtsopts=-N
+  main-is:              DoctestDriver.hs
+  HS-Source-Dirs:       components/succinct-balancedparens--doctest
+  build-tool-depends:   doctest-discover:doctest-discover
 
 library succinct-json
   import:               base, config
@@ -108,7 +284,6 @@ library succinct-json
                       , bits-extra
                       , bytestring
                       , dlist
-                      , hw-balancedparens
                       , hw-bits
                       , hw-mquery
                       , hw-parser
@@ -117,6 +292,7 @@ library succinct-json
                       , mmap
                       , prettyprinter
                       , scientific
+                      , succinct-balancedparens
                       , succinct-json-simple-cursor
                       , succinct-json-standard-cursor
                       , succinct-rankselect
@@ -154,7 +330,6 @@ executable succinct-json-app
                       , bytestring
                       , dlist
                       , generic-lens
-                      , hw-balancedparens
                       , hw-json-simd
                       , hw-mquery
                       , hw-prim
@@ -162,6 +337,7 @@ executable succinct-json-app
                       , lens
                       , mmap
                       , optparse-applicative
+                      , succinct-balancedparens
                       , succinct-json
                       , succinct-json-simple-cursor
                       , succinct-json-standard-cursor
@@ -188,13 +364,13 @@ test-suite succinct-json--test
                       , dlist
                       , hedgehog
                       , hspec
-                      , hw-balancedparens
                       , hw-bits
                       , hw-hspec-hedgehog
                       , hw-mquery
                       , hw-prim
                       , hw-rankselect-base
                       , scientific
+                      , succinct-balancedparens
                       , succinct-json
                       , succinct-json-simple-cursor
                       , succinct-json-standard-cursor
@@ -257,10 +433,10 @@ library succinct-json-examples
 library succinct-json-simple-cursor
   import:               base, config
                       , bytestring
-                      , hw-balancedparens
                       , hw-bits
                       , hw-prim
                       , hw-rankselect-base
+                      , succinct-balancedparens
                       , succinct-rankselect
                       , vector
                       , word8
@@ -280,13 +456,13 @@ executable succinct-json-simple-cursor--app
   import:               base, config
                       , bytestring
                       , generic-lens
-                      , hw-balancedparens
                       , hw-json-simd
                       , hw-prim
                       , hw-rankselect-base
                       , lens
                       , mmap
                       , optparse-applicative
+                      , succinct-balancedparens
                       , succinct-json-simple-cursor
                       , succinct-rankselect
                       , text
@@ -303,11 +479,11 @@ test-suite succinct-json-simple-cursor--test
                       , bytestring
                       , hedgehog
                       , hspec
-                      , hw-balancedparens
                       , hw-bits
                       , hw-hspec-hedgehog
                       , hw-prim
                       , hw-rankselect-base
+                      , succinct-balancedparens
                       , succinct-json-simple-cursor
                       , succinct-rankselect
                       , vector
@@ -346,12 +522,12 @@ library succinct-json-standard-cursor
                       , array
                       , bits-extra
                       , bytestring
-                      , hw-balancedparens
                       , hw-bits
                       , hw-json-simd
                       , hw-prim
                       , hw-rankselect-base
                       , mmap
+                      , succinct-balancedparens
                       , succinct-rankselect
                       , vector
                       , word8
@@ -384,11 +560,11 @@ test-suite succinct-json-standard-cursor--tests
                       , filepath
                       , hedgehog
                       , hspec
-                      , hw-balancedparens
                       , hw-bits
                       , hw-hspec-hedgehog
                       , hw-prim
                       , hw-rankselect-base
+                      , succinct-balancedparens
                       , succinct-json-standard-cursor
                       , succinct-rankselect
                       , vector
@@ -431,11 +607,11 @@ test-suite succinct-json-standard-cursor--doctest
 library succinct-rankselect
   import:               base, config
                       , deepseq
-                      , hw-balancedparens
                       , hw-bits
                       , hw-fingertree
                       , hw-prim
                       , hw-rankselect-base
+                      , succinct-balancedparens
                       , vector
   visibility:           public
   exposed-modules:      HaskellWorks.Data.RankSelect.BitSeq
